# galen

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yaml  nightly.yaml  regression.yaml  release.yaml
schemas/: scan-report-v1.schema.json
scripts/ci/: install-regression-deps.sh
scripts/corpus/: generate-archives.sh  generate-clean.sh  generate-malformed.sh  generate-malicious-synthetic.sh  generate-security-regressions.sh  generate-stress.sh  generate-suspicious.sh  generate.sh  lib.sh
src/: cli.rs  json.rs  main.rs
src/scanner/: database.rs  hash.rs  heuristics.rs  mod.rs  scan.rs  yara.rs
src/updater/: mod.rs  update.rs  update_signatures.rs  update_yara_rules.rs
tests/: regression.rs
yara/: atmos-test.yar  fortinet-test.yar
