[package]
name = "galen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
flate2 = "1.1.9"
rusqlite = { version = "0.40.1", features = ["bundled", "blob"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
tar = "0.4.46"
tempfile = "3.27.0"
ureq = { version = "3.3.0", features = ["json"] }
yara-x = "1.19.0"
zip = "8.6.0"
