[package]
name = "galen"
version = "0.1.0"
edition = "2024"
authors = ["Tom Mann <tom.mann@ironclad-software.com>"]
license = "GPL-3.0-or-later"
description = "A local Linux anti-malware scanner with hash, YARA, heuristic, and archive scanning support."
readme = "README.md"
repository = "https://github.com/tom-mann-ironclad/galen"
keywords = ["linux", "malware", "scanner", "yara", "security"]
categories = ["command-line-utilities"]
publish = false
rust-version = "1.95.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

# --- Debian Packaging Configuration ---
[package.metadata.deb]
maintainer = "Galen <packages@ironclad-software.com>"
copyright = "2026 Tom Mann"
license-file = ["LICENSE.md"]
assets = [
    # [Source Path, Target Destination, Permissions]
    ["target/release/galen", "usr/bin/galen", "755"],
]

# --- RPM Packaging Configuration ---
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/galen", dest = "/usr/bin/galen", mode = "0755" }
]

[dependencies]
chrono = "0.4.45"
flate2 = "1.1.9"
rusqlite = { version = "0.40.1", features = ["bundled", "blob"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
tar = "0.4.46"
tempfile = "3.27.0"
ureq = { version = "3.3.0", features = ["json"] }
yara-x = "1.19.0"
zip = "8.6.0"

[dev-dependencies]
toml = "0.9.8"
